bug:fixed-alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 body{
     font-family: "Inter", sans-serif;
+    background-color: #f9f9f9;
 }
 .main{
     display: flex;
@@ -85,12 +86,14 @@ body{
 .doctor{
   background-image: url("./Assets/image\ 23.png");
   background-color: #F5F5F5; 
-  height:494px;
+  width: 1112px;
+  height: 529px;
   background-position: center; 
   background-repeat: no-repeat; 
   background-size: cover;
   margin-left:20px;
   margin-right: 20px;
+  align-self: center;
 }
 
 .imgcontent{
@@ -149,16 +152,18 @@ body{
     text-decoration: underline;
 }
 .form-ele{
-    background-color:white;
+    background-color:#FFF;
     width:955px;
     height:190px;
     position: absolute;
     bottom: 1;
-    border-radius: 5px;
-    margin-top: 50px;
-    margin-left: 200px;
+    border-radius: 9px;
+    margin-top: 70px;
+    margin-left: 90px;
+    padding-bottom: 30px;
     display: flex;
     flex-direction: column;
+
 
 }
 .book-form{
@@ -408,7 +413,7 @@ body{
     margin: 3px; /* Removes default margins around <p> elements */
 }
 .sideline{
-    width: 1000px;
+    width: 1100px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -416,8 +421,7 @@ body{
 .sideline img{
     width: 99px;
     height:9px;
-    justify-content: flex-end;
-    
+
 }
 
   
